--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ rpds-py==0.30.0
 safetensors==0.7.0
 sentencepiece==0.2.1
 shellingham==1.5.4
+sounddevice==0.5.5
 soundfile==0.13.1
 soxr==1.0.0
 tiktoken==0.12.0
