--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,8 @@ mlx==0.30.6
 mlx-lm==0.30.7
 mlx-metal==0.30.6
 mlx-voxtral==0.0.4
+mpmath==1.3.0
+networkx==3.6.1
 numpy==2.2.6
 packaging==26.0
 pillow==12.1.1
@@ -54,8 +56,11 @@ six==1.17.0
 sounddevice==0.5.5
 soundfile==0.13.1
 soxr==1.0.0
+sympy==1.14.0
 tiktoken==0.12.0
 tokenizers==0.22.2
+torch==2.10.0
+torchaudio==2.10.0
 tqdm==4.67.3
 transformers @ git+https://github.com/huggingface/transformers@c9ea365a7b56326418769a4ba4682864d407ed63
 typer==0.23.1
